--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,28 @@
 /* Use this file to use your own styles*/
 
 /* Import declaration to use Google Fonts - check https://fonts.google.com/ for details */
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 /* Styles for the body */
 
 body {
-	font-family: Lato, "Open Sans", Roboto, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	color: #202030;
+font-family: 'Poppins', sans-serif;	color: #202030;
 	background-color: #f8f8fc;
 }
 
 /* Styles for custom classes in the document. (There are more, try to find them out!) */
 
 .resume-header {
-    background-color: #e0f0ff;
+    background-color: #027373;
+	Color: white;
 }
 
 .resume-main {
-	background-color: #fffefc;
+	background-color: #F2E7DC;
 }
 
 .resume-aside {
-	background-color: #fff0e0;
+	background-color: #A9D9D0;
 }
 
 /* Styles for lists in the document */
